# smart-oocc

./: CMakeLists.txt  OOCC.tla  README.md
ae/collect/config/: smart_config.dtx.json
config/: backend.json  smart_config.json  test_rdma.json  transaction-bak.json  transaction.json  workload_a.json
dtx/: CMakeLists.txt  addr_cache.h  common.h  cuckoohash_config.hh  cuckoohash_map.hh  drtm.cpp  dslr.cpp  dtx.cpp  dtx.h  dtx_back.cpp  dtx_back.h  manager.h  memstore.h
dtx/smallbank/: backend.cpp  bench.cpp
dtx/taobench/: CMakeLists.txt  backend.cpp  bench.cpp  fast_random.h  parse_config.cc  parse_config.h  tao.h
dtx/tatp/: backend.cpp  bench.cpp  tatp.h
dtx/tpcc/: CMakeLists.txt  backend.cpp  bench.cpp  tpcc.cpp  tpcc.h
dtx/ycsb/: CMakeLists.txt  backend.cpp  bench.cpp  ycsb.h  zipf.h
include/smart/: global_address.h  initiator.h  task.h
include/util/: generator.h
smart/: initiator.cpp  resource_manager.cpp
test/: CMakeLists.txt  test_rdma.cpp  test_rdma_dyn.cpp  test_rdma_write.cpp  test_rema_write.cpp
